# Visao-Computador

./: CMakeLists.txt
CodigoFonte/: CMakeLists.txt  main.cpp  vc.c  vc.h
CodigoFonte/Documentacao/: WorkDocumentation.rtf
CodigoFonte/Documentacao/html/: annotated.html  classes.html  dir_5c8437b30829a576f0726dd6084b6a96.html  dir_8df09c2692ff8b790a19c86eae64854b.html  functions_vars.html  globals.html  globals_func.html  index.html  menudata.js  vc_8c.html
CodigoFonte/Documentacao/html/search/: all_3.js  all_5.js  all_6.js  all_c.js  all_d.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_7.js  searchdata.js  variables_1.js
CodigoFonte/Documentacao/rtf/: dir_8df09c2692ff8b790a19c86eae64854b.rtf  refman.rtf
Documentacao/html/: dir_b08f5f76948c1bb5c0cd8cd56967e6fc.html  files.html  functions.html  globals_defs.html  main_8cpp.html  struct_i_v_c-members.html  struct_i_v_c.html  struct_o_v_c-members.html  struct_o_v_c.html  vc_8h.html  vc_8h_source.html
Documentacao/html/search/: all_1.js  all_2.js  all_7.js  all_8.js  all_a.js  all_b.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  functions_3.js  functions_5.js  variables_2.js  variables_3.js  variables_5.js  variables_7.js  variables_8.js  variables_9.js
Documentacao/rtf/: dir_5c8437b30829a576f0726dd6084b6a96.rtf  dir_b08f5f76948c1bb5c0cd8cd56967e6fc.rtf  refman.rtf
